fix: preTreatment 改为 boolean
